# GASGD

./: ASGD.h  CMakeLists.txt  Data.h  GASGD.cpp  LICENSE  Partitioner.h  README.md  runGASGD.sh
CMake/FindTBB/: FindTBB.cmake
struct/: MPIStructs.h  Object.h  Rating.h
util/: Base.h  Conf.h  FileUtil.h  Monitor.h  RandomUtil.h
